--- a/users/package.json
+++ b/users/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "tap test/**/*.test.js",
     "start": "fastify-app run",
-    "dev": "fastify-app run -l info -P -w"
+    "dev": "NODE_OPTIONS=\"-r ./apm.js\" fastify-app run -l info -p 3003"
   },
   "keywords": [
     "fastify",
@@ -16,14 +16,19 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "elastic-apm-node": "^3.5.0",
     "fastify": "^2.13.0",
-    "fastify-plugin": "^1.6.1",
     "fastify-autoload": "^1.2.2",
+    "fastify-jwt": "^1.3.1",
+    "fastify-mongodb": "^2.0.0",
+    "fastify-plugin": "^1.6.1",
+    "fluent-schema": "^0.10.0",
     "is-docker": "^2.0.0",
     "make-promises-safe": "^5.1.0",
     "pino-colada": "^1.6.1",
     "pump": "^3.0.0",
     "resolve-from": "^5.0.0",
+    "secure-password": "^3.1.0",
     "yargs-parser": "^18.1.2"
   },
   "devDependencies": {
