--- a/gateway/package.json
+++ b/gateway/package.json
@@ -19,6 +19,7 @@
     "elastic-apm-node": "^3.5.0",
     "fastify": "^2.13.0",
     "fastify-autoload": "^1.2.2",
+    "fastify-cors": "^3.0.3",
     "fastify-http-proxy": "^3.2.0",
     "fastify-plugin": "^1.6.1",
     "is-docker": "^2.0.0",
