--- a/users/package.json
+++ b/users/package.json
@@ -27,10 +27,11 @@
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
-    "fluent-json-schema": "^3.0.1",
-    "secure-password": "^4.0.0"
+    "fluent-json-schema": "^3.0.1"
   },
   "devDependencies": {
+    "mongo-clean": "^2.0.0",
+    "secure-password": "^4.0.0",
     "standard": "^16.0.4",
     "tap": "^15.0.9"
   }
