--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@
         - "9200:9200"
       healthcheck:
         test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health | grep -v '\"status\":\"red\"'"]
+      networks:
+        - envoymesh
         
     kibana:
       image: docker.elastic.co/kibana/kibana:7.6.0
@@ -30,6 +32,8 @@
         test: ["CMD", "curl", "-f", "http://kibana:5601/"]
       depends_on:
         - elasticsearch
+      networks:
+        - envoymesh
     
     apm-server:
       image: docker.elastic.co/apm/apm-server:7.6.0
@@ -46,6 +50,8 @@
         - kibana
       healthcheck:
         test: ["CMD", "curl", "-f" ,"http://apm-server:8200/"]
+      networks:
+        - envoymesh
   
     mongodb-web:
       image: mongo:4.4.10
