--- a/auth/package.json
+++ b/auth/package.json
@@ -17,23 +17,23 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "elastic-apm-node": "^3.23.0",
-    "fastify": "^3.0.0",
-    "fastify-autoload": "^3.3.1",
-    "fastify-cli": "^2.13.0",
-    "fastify-cors": "^6.0.2",
-    "fastify-jwt": "^3.2.1",
+    "elastic-apm-node": "^3.31.0",
+    "fastify": "^3.28.0",
+    "fastify-autoload": "^3.11.0",
+    "fastify-cli": "^2.15.0",
+    "fastify-cors": "^6.0.3",
+    "fastify-jwt": "^4.1.3",
     "fastify-mongodb": "^4.1.1",
-    "fastify-plugin": "^3.0.0",
-    "fastify-sensible": "^3.1.0",
-    "fluent-json-schema": "^3.0.1",
+    "fastify-plugin": "^3.0.1",
+    "fastify-sensible": "^3.1.2",
+    "fluent-json-schema": "^3.1.0",
     "secure-password": "^4.0.0"
   },
   "devDependencies": {
     "mongo-clean": "^2.0.0",
     "standard": "^16.0.4",
-    "tap": "^15.0.9"
+    "tap": "^16.0.1"
   }
 }
